# recipe-extractor

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: known-issues.md
docs/plans/: 2026-02-26-recipe-extractor-design.md  2026-02-26-recipe-extractor-implementation.md  2026-03-02-multi-source-merging-design.md  2026-03-02-multi-source-merging-plan.md
src/: llm.py  main.py  router.py
src/agents/: base.py  instagram.py  web.py  youtube.py
src/extractors/: instagram_loader.py  web_scraper.py  youtube_transcript.py
src/models/: recipe.py
tests/: conftest.py  test_format_sources.py  test_instagram_agent.py  test_instagram_extractor.py  test_llm.py  test_main.py  test_models.py  test_router.py  test_web_agent.py  test_web_scraper.py  test_youtube_agent.py  test_youtube_extractor.py
