[project]
name = "recipe-extractor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[openai]>=0.0.20",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2024.12.0",
    "openai-whisper>=20231117",
    "instaloader>=4.13.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
